Prevent jumpy exit animations

--- a/turn.css
+++ b/turn.css
@@ -14,6 +14,11 @@ html.turn-enter [data-turn-enter] {
   animation-duration: .6s;
 }
 
+html.turn-before-exit [data-turn-exit],
+html.turn-exit [data-turn-exit] {
+  will-change: transform, opacity;
+}
+
 @keyframes fade-out-up {
   0% {
    opacity: 1;
